--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.container {
+  @apply max-w-5xl mx-auto px-4;
+}
+
+section {
+  @apply py-20;
+}
